k8s/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pnc360-frontend
  namespace: pnc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pnc360.qa.aurainsure.ai
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pnc360.qa.aurainsure.ai
      secretName: qa-aurainsuredotai-tls
  rules:
    - host: pnc360.qa.aurainsure.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pnc360-frontend
                port:
                  number: 80
